# NexWallet

./: .gitignore  LICENSE  README.md  docker-compose.yml  eslint-results.sarif  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: page.tsx
backend/: Dockerfile  main.py  pyproject.toml  test.env
backend/.virtual_documents/playground/: voice_req_playground.ipynb
backend/controllers/: agent_controller.py  auth.py  auth_controller.py  clone_voice.py  clone_voice_controller.py  page_manager.py  twitter_controller.py
backend/controllers/request_models/: admin_models.py  agent_models.py  auth_models.py  voice_models.py
backend/llm/cdp/: agent_factory.py
backend/llm/cdp/cdp_arbitrum/: agent.py
backend/llm/cdp/cdp_base/: agent.py
backend/llm/cdp/cdp_ethereum/: agent.py
backend/llm/cdp/cdp_optimism/: agent.py
backend/llm/cdp/coinbase_agentkit/wallet_providers/: eth_account_wallet_provider.py
backend/llm/decision_maker/: __init__.py  langchain_agent.py
backend/llm/decision_maker/tools/: __init__.py  model.py  utils.py
backend/llm/decision_maker/tools/cdp/: cdp_arbitrum_tool.py  cdp_base_tool.py  cdp_ethereum_tool.py  cdp_optimism_tool.py
backend/llm/decision_maker/tools/knowledge_base/: sushi_swap_tool.py
backend/llm/solana/: index.ts  package-lock.json  package.json  tsconfig.json
backend/llm/solana/agent_kit/: package-lock.json
backend/middleware/: withAdmin.py  with_admin.py
backend/models/: __init__.py  auth.py  chain.py  user.py
backend/playground/: voice_req_playground.ipynb
backend/playground/.ipynb_checkpoints/: voice_req_playground-checkpoint.ipynb
backend/tests/: test_app_running.py
backend/tests/agent_controller/: test_agent_controller.py
backend/utils/: database.py  environment_manager.py  voice.py
backend/utils/constants/: environment_keys.py
bnb_ai/: package-lock.json  package.json
bnb_api/: README.md  package-lock.json  package.json  tsconfig.json
bnb_trader/: README.md  package-lock.json  package.json
ethereum_wallet/: hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
frontend_app/: .dockerignore  .eslintrc.json  Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  start.sh  tailwind.config.ts  tsconfig.json
multiverse/: assetTransferAgent.ts  index.ts
stellar_wallet/wallet/: .env  Cargo.toml  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.json
stellar_wallet/wallet/contracts/soroswap-plugin/: Cargo.toml
stellar_wallet/wallet/contracts/soroswap-plugin/src/: lib.rs
stellar_wallet/wallet/contracts/soroswap-plugin/test_snapshots/tests/: test_atomic_swap.1.json
stellar_wallet/wallet/contracts/wallet/: Cargo.toml
stellar_wallet/wallet/contracts/wallet-factory/: Cargo.toml
stellar_wallet/wallet/contracts/wallet-factory/src/: lib.rs
stellar_wallet/wallet/contracts/wallet/src/: lib.rs  test.rs
stellar_wallet/wallet/scripts/: deploy.ts
(+621 files in other folders)
