[tool.poetry]
name = "nexai-backend"
version = "0.0.1"
description = "Backend App of Nexarb"
authors = ["Dogukan Gun <dogukangundogan5@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.14"
langgraph = "^0.2.76"
coinbase-agentkit-langchain = {version = "^0.1.1.dev2025022120250221202502212", allow-prereleases = true}
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
langchain-core = "^0.3.40"
langchain = {extras = ["openai"], version = "^0.3.19"}
psycopg2 = "^2.9.10"
cdp-sdk = "0.19.0"
pydantic = "^2.0"
web3 = "^7.6.0"
requests = "^2.31.0"
itsdangerous = "^2.2.0"
tts = "^0.22.0"
torch = "^2.6.0"
notebook = "^7.3.3"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.19"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^2.4.4"
myst-parser = "^4.0.0"
ruff-lsp = "^0.0.58"
python-lsp-server = "^1.12.0"
tweepy = "^4.15.0"
towncrier = "^24.8.0"
jinja2 = "^3.1.3"
typer = "^0.9.0"
prompt-toolkit = "^3.0.50"
questionary = "^2.1.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.langchain-cdp-chatbot]
private = true