[workspace]
name = "soroban-wallet"
version = "0.1.0"
edition = "2021"
resolver = "2"
members = [
    "contracts/*",
    "contracts/wallet-factory",
    "contracts/wallet",
    "contracts/soroswap-plugin",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.8" }
soroban-token-sdk = { version = "22.0.8" }
stellar-xdr = { version = "22.0.8", features = ["curr", "std", "serde"] }

[workspace.dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.metadata]
authors = ["Dogukan Gundogan <dogukangundogan@gmail.com>"]
license = "MIT"
homepage = "https://github.com/dogukanakkaya/nexwallet"
repository = "https://github.com/dogukanakkaya/nexwallet"
