[package]
name = "soroban-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-xdr = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, version = "22.0.8", features = ["testutils"] }
stellar-xdr = { workspace = true } 